--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
+  sdk: ">=2.9.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -28,10 +28,19 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  dio: ^4.0.0
+  bloc: ^7.1.0
+  rxdart: ^0.27.1
+  eva_icons_flutter: ^3.0.0
+  flutter_rating_bar: ^4.0.0
+  page_indicator: ^0.4.1
+  font_awesome_flutter: ^9.1.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
